base-installer (1.31) UNRELEASED; urgency=low

  * update hppa to 2.6.12 kernels
  * add logic to support selection of SMP vs uniprocessor on hppa

 -- Bdale Garbee <bdale@gag.com>  Wed, 21 Sep 2005 13:02:57 -0600

base-installer (1.30) unstable; urgency=low

  * Switch i386 and ia64 to use linux-image-2.6-<foo> for
    base-installer/kernel/image-2.6. Now that debian-cd always includes these
    packages, this should be safe to do. On i386 this solves the issue of
    base-installer failing to install linux-image-2.6-686 as it is not
    on the netinst CD, and then falling back to linux-image-2.6.12-686 which
    was the previous default value. With the new default the installed system
    will properly track minor kernel revisions automatically.
  * Deal with similar issues on amd64.
  * Fix name of base-installer/kernel/linux/link_in_boot. Closes: #329391

  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Galician (gl.po) by Jacobo Tarrio
    - Dutch (nl.po) by Frans Pop

 -- Joey Hess <joeyh@debian.org>  Wed, 21 Sep 2005 18:39:59 +0200

base-installer (1.29) unstable; urgency=low

  [ Frans Pop ]
  * Correct postinst code to look for kernel-image and linux-image
    packages (solution proposed by ths).

  * Updated translations: 
    - Basque (eu.po) by Piarres Beobide

 -- Joey Hess <joeyh@debian.org>  Thu, 15 Sep 2005 13:18:08 -0400

base-installer (1.28) unstable; urgency=low

  [ Joey Hess and Frans Pop ]
  * In the postinst, look for new linux-image packages as well as old
    kernel-image packages.
  * In the fallback template, switch preferred i386 kernel to
    linux-image-2.6.12-1-386.
  * For i386 and sparc, make arch_get_kernel return linux-image packages
    for 2.6 kernels, while still using kernel-image packages for 2.4.
  * Switch a few missing ia64 pieces over to linux-image kernels.
  * Note that amd64, hppa, etc are still preferring the old