@@ -1,23 +1,14 @@
 cpuinfo paer.cpuinfo
 machine parisc64
-majors 2.4 2.6
+majors 2.6
 flavour parisc64
-kernel-2.4 kernel-image-2.4.27-64-smp
-kernel-2.6 kernel-image-2.6.8-2-64-smp
+kernel-2.6 linux-image-parisc64-smp
 usable \
-  kernel-image-2.4.25-32 \
-  kernel-image-2.4.25-32-smp \
-  kernel-image-2.4.25-64 \
-  kernel-image-2.4.25-64-smp \
-  kernel-image-2.4.26-32 \
-  kernel-image-2.4.26-32-smp \
-  kernel-image-2.4.26-64 \
-  kernel-image-2.4.26-64-smp \
-  kernel-image-2.4.27-32 \
-  kernel-image-2.4.27-32-smp \
-  kernel-image-2.4.27-64 \
-  kernel-image-2.4.27-64-smp \
   kernel-image-2.6.8-2-32 \
   kernel-image-2.6.8-2-32-smp \
   kernel-image-2.6.8-2-64 \
-  kernel-image-2.6.8-2-64-smp
+  kernel-image-2.6.8-2-64-smp \
+  linux-image-2.6.12-1-parisc \
+  linux-image-2.6.12-1-parisc-smp \
+  linux-image-2.6.12-1-parisc64 \
+  linux-image-2.6.12-1-parisc64-smp
