@@ -2,8 +2,9 @@ base-installer (1.31) UNRELEASED; urgency=low
 
   * update hppa to 2.6.12 kernels
   * add logic to support selection of SMP vs uniprocessor on hppa
+  * fix kernel selection logic and related test suite, all tests pass now!
 
- -- Bdale Garbee <bdale@gag.com>  Wed, 21 Sep 2005 13:02:57 -0600
+ -- Bdale Garbee <bdale@gag.com>  Wed, 21 Sep 2005 13:50:52 -0600
 
 base-installer (1.30) unstable; urgency=low
 
